---
source: src/parser.rs
assertion_line: 2292
expression: "parse(\"\\\nlet x = a\n  x\")"

---
Input:

let x = a
  x

Result:

:2:3

Expected the let definition to be followed by another expression in the next line and same indentation, but instead found: `[End of file]`

  1│  let x = a
  2│    x
   │     ↑

Error {
    kind: InvalidLetBodyIndent,
    token: Token {
        kind: Eof,
        position: 13,
        end_position: 13,
        lexeme: "[End of file]",
        line: 2,
        column: 3,
        indent: 2,
    },
}
